репозиторий и сервис для БД
