# src/app/handlers/song.go
@@ -1,12 +1,21 @@
 package handlers
 
 import (
-	"EffectiveMobile/src/database"
-	"EffectiveMobile/src/database/methods"
+	"EffectiveMobile/src/app/services"
 	"EffectiveMobile/src/database/models"
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"strconv"
 )
+
+type SongHandler struct {
+	songService  *services.SongService
+	groupService *services.GroupService
+}
+
+func NewSongHandler(songService *services.SongService, groupService *services.GroupService) *SongHandler {
+	return &SongHandler{songService: songService, groupService: groupService}
+}
 
 // CreateSong godoc
 // @Tags Songs
@@ -18,33 +27,16 @@ import (
 // @Failure 400 "Bad Request"
 // @Failure 500 "Internal Server Error"
 // @Router /api/songs [post]
-func CreateSong(c *gin.Context) {
-	db := database.DB
+func (h *SongHandler) CreateSong(c *gin.Context) {
 	song := models.SongRequest{}
-
 	if err := c.ShouldBindJSON(&song); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	groupID := methods.GetGroupIDByTitle(song.GroupName)
-
-	newSong := models.Song{
-		Title:   song.Title,
-		GroupID: groupID,
-	}
-
-	if err := db.Create(&newSong).Error; err != nil {
+	resSong, err := h.songService.CreateSong(song)
+	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	groupTitle := methods.GetGroupTitleByID(newSong.GroupID)
-
-	resSong := models.SongResponse{
-		Id:        newSong.ID,
-		Title:     newSong.Title,
-		GroupName: groupTitle,
 	}
 
 	c.JSON(http.StatusCreated, gin.H{"data": resSong})
@@ -57,19 +49,19 @@ func CreateSong(c *gin.Context) {
 // @Param id path integer true "Song ID"
 // @Success 200 {object} models.SongResponse
 // @Router /api/songs/{id} [get]
-func GetSong(c *gin.Context) {
-	db := database.DB
-	song := models.Song{}
-	if err := db.First(&song, c.Param("id")).Error; err != nil {
+func (h *SongHandler) GetSong(c *gin.Context) {
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	resSong, err := h.songService.GetSong(uint(id))
+	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	groupTitle := methods.GetGroupTitleByID(song.GroupID)
-	resSong := models.SongResponse{
-		Id:        song.ID,
-		Title:     song.Title,
-		GroupName: groupTitle,
-	}
+
 	c.JSON(http.StatusOK, gin.H{"data": resSong})
 }
 
@@ -79,20 +71,12 @@ func GetSong(c *gin.Context) {
 // @Produce json
 // @Success 200 {object} models.SongResponse
 // @Router /api/songs [get]
-func GetSongs(c *gin.Context) {
-	db := database.DB
-	var songs []models.Song
-	if err := db.Find(&songs).Error; err != nil {
+func (h *SongHandler) GetSongs(c *gin.Context) {
+	resSongs, err := h.songService.GetSongs()
+	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
 	}
-	resSongs := make([]models.SongResponse, len(songs))
-	for idx, song := range songs {
-		groupTitle := methods.GetGroupTitleByID(song.GroupID)
-		resSongs[idx] = models.SongResponse{
-			Id:        song.ID,
-			Title:     song.Title,
-			GroupName: groupTitle,
-		}
-	}
+
 	c.JSON(http.StatusOK, gin.H{"data": resSongs})
 }
